--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     tags:
-      - v[0-9]+.*
+      - [0-9]+.*
 
 jobs:
   upload-assets:
@@ -16,14 +16,19 @@ jobs:
           - windows-latest
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
+      - name: GitHub Tag Name test
+        run: |
+          echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
+          echo "Tag name from env.GITHUB_REF_NAME: ${{env.GITHUB_REF_NAME}}"          
+          echo "Tag name from github.ref_name: ${{  github.ref_name }}"
+          echo "runner.os: ${{  runner.os }}"
       # Checkout holochain repo
       - name: Checkout holochain repo
-        run: git clone --depth 1 --branch holochain-0.1.0 https://github.com/holochain/holochain.git
+        run: git clone --depth 1 --branch holochain-$GITHUB_REF_NAME https://github.com/holochain/holochain.git
       # Build hc
       - name: Build hc
         env:
-          FIX_SQL_FMT: 1         
+          FIX_SQL_FMT: 1
         run: cargo build --release --manifest-path ./holochain/crates/hc/Cargo.toml
       # list release folder
       - name: list release folder
