--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     tags:
-      - v[0-9]+.*
+      - '[0-9]+.*'
 
 jobs:
   upload-assets:
@@ -24,7 +24,7 @@ jobs:
           echo "runner.os: ${{  runner.os }}"
       # Checkout holochain repo
       - name: Checkout holochain repo
-        run: git clone --depth 1 --branch holochain-0.1.1 https://github.com/holochain/holochain.git
+        run: git clone --depth 1 --branch holochain-${{  github.ref_name }} https://github.com/holochain/holochain.git
       # Build hc
       - name: Build hc
         env:
@@ -42,7 +42,7 @@ jobs:
           command: c
           files: |
             ./holochain/target/release/hc
-          outPath: hc_linux.tar.gz
+          outPath: hc_${{  runner.os }}.tar.gz
       - name: Compress binary
         if: ${{ runner.os == 'macOs' }}
         uses: a7ul/tar-action@v1.1.2
@@ -50,7 +50,7 @@ jobs:
           command: c
           files: |
             ./holochain/target/release/hc
-          outPath: hc_mac.tar.gz
+          outPath: hc_${{  runner.os }}.tar.gz
       - name: Compress binary
         if: ${{ runner.os == 'Windows' }}
         uses: a7ul/tar-action@v1.1.2
@@ -60,21 +60,8 @@ jobs:
             ./holochain/target/release/hc.exe
           outPath: hc_windows.tar.gz
       # upload binary for each platform
-      - name: upload binary (ubuntu only)
-        if: ${{ runner.os == 'Linux' }}
+      - name: upload binary (ubuntu-mac only)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release upload "${GITHUB_REF#refs/tags/}" "hc_linux.tar.gz" --clobber
-      - name: upload binary (macos only)
-        if: ${{ runner.os == 'macOs' }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release upload "${GITHUB_REF#refs/tags/}" "hc_mac.tar.gz" --clobber
-      - name: upload binary (Windows only)
-        if: ${{ runner.os == 'Windows' }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release upload "$($env:GITHUB_REF -replace "refs/tags/")" "hc_windows.tar.gz" --clobber 
+          gh release upload "${{  github.ref_name }}" "hc_${{  runner.os }}.tar.gz" --clobber
