--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,23 +26,15 @@ jobs:
         run: ls
         working-directory: holochain/target/release
       # Compress binary for each platform
-      - name: Compress binary
-        if: ${{ runner.os == 'Linux' }}
+      - name: Compress binary (unix)
+        if: ${{ runner.os == 'Linux' || runner.os == 'macOs' }}
         uses: a7ul/tar-action@v1.1.2
         with:
           command: c
           files: |
             ./holochain/target/release/hc
           outPath: hc_${{  runner.os }}.tar.gz
-      - name: Compress binary
-        if: ${{ runner.os == 'macOs' }}
-        uses: a7ul/tar-action@v1.1.2
-        with:
-          command: c
-          files: |
-            ./holochain/target/release/hc
-          outPath: hc_${{  runner.os }}.tar.gz
-      - name: Compress binary
+      - name: Compress binary (windows)
         if: ${{ runner.os == 'Windows' }}
         uses: a7ul/tar-action@v1.1.2
         with:
@@ -50,19 +42,13 @@ jobs:
           files: |
             ./holochain/target/release/hc.exe
           outPath: hc_${{  runner.os }}.tar.gz
+      # list root folder
+      - name: list root folder
+        run: ls
+        working-directory: ./
       # upload binary for each platform
-      - name: upload binary (ubuntu only)
-        if: ${{ runner.os == 'Linux' || runner.os == 'macOs'}}
+      - name: upload binary
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          cp ./holochain/target/release/hc hc_${{  runner.os }}
-          gh release upload "manual-release" "hc_${{  runner.os }}" --clobber
-          gh release upload "manual-release" "hc_${{  runner.os }}.tar.gz" --clobber
-      - name: upload binary (Windows only)
-        if: ${{ runner.os == 'Windows' }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release upload "manual-release" "hc_${{  runner.os }}.tar.gz" --clobber          
-          gh release upload "manual-release" "./holochain/target/release/hc.exe" --clobber
+          gh release upload "manual-release" "hc_${{  runner.os }}.tar.gz" --clobber     
