--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ jobs:
           - windows-latest
     runs-on: ${{ matrix.os }}
     steps:
+      - uses: actions/checkout@v3
       - name: GitHub Tag Name test
         run: |
           echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
@@ -35,32 +36,28 @@ jobs:
         run: ls
         working-directory: holochain/target/release
       # Compress binary for each platform
-      - name: Compress binary
-        if: ${{ runner.os == 'Linux' }}
+      - name: Compress binary (unix)
+        if: ${{ runner.os == 'Linux' || runner.os == 'macOs' }}
         uses: a7ul/tar-action@v1.1.2
         with:
           command: c
           files: |
             ./holochain/target/release/hc
           outPath: hc_${{  runner.os }}.tar.gz
-      - name: Compress binary
-        if: ${{ runner.os == 'macOs' }}
-        uses: a7ul/tar-action@v1.1.2
-        with:
-          command: c
-          files: |
-            ./holochain/target/release/hc
-          outPath: hc_${{  runner.os }}.tar.gz
-      - name: Compress binary
+      - name: Compress binary (windows)
         if: ${{ runner.os == 'Windows' }}
         uses: a7ul/tar-action@v1.1.2
         with:
           command: c
           files: |
             ./holochain/target/release/hc.exe
-          outPath: hc_windows.tar.gz
-      # upload binary for each platform
-      - name: upload binary (ubuntu-mac only)
+          outPath: hc_${{  runner.os }}.tar.gz
+      # list root folder
+      - name: list root folder
+        run: ls
+        working-directory: ./
+      # upload binary
+      - name: upload binary
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
