--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,16 +14,19 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - name: NPM Setup
+        if: ${{ runner.os == 'Windows' }}        
         shell: bash
         run: |
           npm config set script-shell "C:\\Program Files\\git\\bin\\bash.exe"
       # Test scripts
       - name: install:hc-cli
+        continue-on-error: true
         shell: bash
         run: |
           npm run install:hc-cli
       - name: version
         shell: bash
+        continue-on-error: true
         run: |
           npm run version
       - uses: actions/checkout@v3
