--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,17 +13,17 @@ jobs:
           - windows-latest
     runs-on: ${{ matrix.os }}
     steps:
+      - uses: actions/checkout@v3
       - name: NPM Setup
         if: ${{ runner.os == 'Windows' }}
         shell: bash
         run: |
           npm config set script-shell "C:\\Program Files\\git\\bin\\bash.exe"
       # Test config
-      - name: GitHub Tag Name test
+      - name: print-config
         shell: bash
         run: |
           npm run print-config
-      - uses: actions/checkout@v3
       # Checkout holochain repo
       - name: Checkout holochain repo
         run: git clone --depth 1 --branch holochain-0.1.3 https://github.com/holochain/holochain.git
