--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,7 +78,7 @@ jobs:
           command: c
           files: |
             ./holochain/target/release/hc.exe
-          outPath: hc_sandbox-${{  runner.os }}x86_64.tar.gz
+          outPath: hc_sandbox-${{  runner.os }}-x86_64.tar.gz
       # list root folder
       - name: list root folder
         run: ls
