--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,7 @@ jobs:
       - name: GitHub Tag Name test
         run: |
           echo "Tag name from hc-version: ${{ github.hc-version }}"
-          echo "Tag name from hc-version: ${{ hc-version }}"
-          echo "Tag name from upload-tag: ${{ upload-tag }}"
+          echo "Tag name from upload-tag: ${{ github.upload-tag }}"
           echo "               runner.os: ${{ runner.os }}"
       # Checkout holochain repo
       - name: Checkout holochain repo
