--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
           echo "               runner.os: ${{ runner.os }}"
       # Checkout holochain repo
       - name: Checkout holochain repo
-        run: git clone --depth 1 --branch holochain-${{ github.hc-version }} https://github.com/holochain/holochain.git
+        run: git clone --depth 1 --branch holochain-${{ inputs.hc-version }} https://github.com/holochain/holochain.git
       # Build hc
       - name: Build hc
         env:
@@ -92,5 +92,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release upload "${{ github.upload-tag }}" "hc-${{  runner.os }}-x86_64.tar.gz" --clobber
-          gh release upload "${{ github.upload-tag }}" "hc_sandbox-${{  runner.os }}-x86_64.tar.gz" --clobber
+          gh release upload "${{ inputs.upload-tag }}" "hc-${{  runner.os }}-x86_64.tar.gz" --clobber
+          gh release upload "${{ inputs.upload-tag }}" "hc_sandbox-${{  runner.os }}-x86_64.tar.gz" --clobber
