--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "bin": "bin"
   },
   "scripts": {
-    "print-config"     : "echo config.bin: $npm_package_config_bin && echo config.bin: \\\"$npm_package_config_bin\\\"",
-    "version"          : "$npm_package_config_bin/hc --version",
+    "print-config"      : "echo config.bin: $npm_package_config_bin && echo config.bin: \\\"$npm_package_config_bin\\\"",
+    "version"           : "$npm_package_config_bin/hc --version",
     "install:rust"      : "bash install-rust.sh",
     "install:hc-cli"    : "bash install-hc-cli.sh $npm_package_config_bin 0.1.0",
     "install:hash-zome" : "bash install-hash-zome.sh $npm_package_config_bin",
-    "copy-binaries"     : "bash copy-binaries.sh electron/bin"
+    "copy-binaries"     : "bash copy-binaries.sh electron/bin",
+    "dl-manual-release" : "rm -rf release & mkdir -p release & gh release download manual-release -D release -R ddd-mtl/hc-prebuilt"
   },
   "dependencies": {
     "@lightningrodlabs/electron-holochain": "=0.7.6"
