--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "hc-prebuilt-dev",
   "private": true,
   "config": {
+    "hc_version": "0.5.6",
     "bin": "bin"
   },
   "scripts": {
-    "print-config"      : "echo config.bin: $npm_package_config_bin && echo config.bin: \\\"$npm_package_config_bin\\\"",
-    "version"           : "$npm_package_config_bin/hc --version",
-    "install:rust"      : "bash install-rust.sh",
-    "install:hc-cli"    : "bash install-hc-cli.sh $npm_package_config_bin 0.1.0",
-    "install:hash-zome" : "bash install-hash-zome.sh $npm_package_config_bin",
-    "copy-binaries"     : "bash copy-holochain-runner.sh electron/bin",
-    "dl-manual-release" : "rm -rf release & mkdir -p release & gh release download manual-release -D release -R ddd-mtl/hc-prebuilt"
+    "print-config"          : "echo config.bin: $npm_package_config_bin && echo config.hc_version: \\\"$npm_package_config_hc_version\\\"",
+
+    "install:rust"          : "bash install-rust.sh",
+
+    "download:hc"           : "bash download-hc.sh $npm_package_config_bin $npm_package_config_hc_version",
+    "download:hash-zome"    : "bash download-hash-zome.sh $npm_package_config_bin",
+
+    "copy-holochain-runner" : "bash copy-holochain-runner.sh electron/bin",
+
+    "check"                 : "$npm_package_config_bin/hc --version",
+
+
+    "dl-manual-release"     : "rm -rf release & mkdir -p release & gh release download manual-release -D release -R ddd-mtl/hc-prebuilt"
   },
   "dependencies": {
     "@lightningrodlabs/electron-holochain": "=0.7.6"
