--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "@ddd-qc/hc-prebuilt",
-  "version": "0.506.2",
+  "version": "0.601.0",
   "description": "Scripts for downloading Holochain binaries",
   "config": {
-    "k2_version": "0.2.17",
-    "hc_version": "0.5.6",
+    "hc_version": "0.6.1-rc.0",
     "bin": "bin"
   },
   "repository": {
@@ -23,7 +22,8 @@
 
     "download:hc"           : "bash download-hc.sh hc $npm_package_config_bin $npm_package_config_hc_version",
     "download:holochain"    : "bash download-hc.sh holochain $npm_package_config_bin $npm_package_config_hc_version",
-    "download:kitsune"      : "bash download-hc.sh kitsune2-bootstrap-srv $npm_package_config_bin $npm_package_config_k2_version",
+    "download:kitsune"      : "bash download-hc.sh kitsune2-bootstrap-srv $npm_package_config_bin $npm_package_config_hc_version",
+    "download:lair"         : "bash download-hc.sh lair-keystore $npm_package_config_bin $npm_package_config_hc_version",
 
     "download:hash-zome"    : "bash download-hash-zome.sh $npm_package_config_bin",
 
